--- a/application.yml
+++ b/application.yml
@@ -1,15 +1,22 @@
+source_list:
+  - SB
+  - OL
+
+SB:
+  mysql_conf:
+    partition_column: App_Transaction_Id
+    query : "(select * from testdb.TRANSACTIONSYNC) as t"
+
+OL:
+  sftp_conf:
+      filetype: csv
+      delimiter: |
+      directory: /home/ubuntu/data
+      filename: receipts_delta_GBR_14_10_2017.csv
+
 s3_conf:
   s3_bucket: binod-505
-
-sftp_conf:
-    filetype: csv
-    delimiter: |
-    directory: /home/ubuntu/data
-
-mysql_conf:
-  dbtable: testdb.TRANSACTIONSYNC
-  partition_column: App_Transaction_Id
-  query : "(select * from testdb.TRANSACTIONSYNC where Internal_Member_Id = 'PC7135361') as t"
+  staging_dir: staging
 
 mongodb_config:
   database: school
@@ -19,7 +26,7 @@ redshift_conf:
   filetype: csv
   delimiter: |
   dbtable: PUBLIC.sales
-  query: SELECT sellerid,buyerid from PUBLIC.sales
+  query: SELECT sellerid, pricepaid from PUBLIC.sales
 
 spark_sql_demo:
   agg_demo: >
@@ -31,8 +38,6 @@ spark_sql_demo:
         array_contains(UniqueTransactionDescriptions, 'Movies') as WentToMovies
     from
         agg_finances
-
-
   case_when_demo: >
     select
         company,
