--- a/application.yml
+++ b/application.yml
@@ -16,6 +16,7 @@ CP:
   s3_conf:
     s3_bucket: binod-505
     cust_dir: data
+    staging_dir: staging
     filename: KC_Extract_1_20171009.csv
 
 ADDR:
