--- a/application.yml
+++ b/application.yml
@@ -14,7 +14,7 @@ OL:
     filename: receipts_delta_GBR_14_10_2017.csv
 CP:
   s3_conf:
-    s3_bucket: binod-505
+    s3_bucket: guru-1234
     cust_dir: data
     filename: KC_Extract_1_20171009.csv
 
