--- a/application.yml
+++ b/application.yml
@@ -19,8 +19,8 @@ CP:
 
 ADDR:
   mongodb_config:
-    database: cust
-    collection: address
+    database: school
+    collection: students
 
 s3_conf:
   s3_bucket: guru-1234
